# demand-forecast

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
lightning_logs/version_0/: events.out.tfevents.1775698018.DESKTOP-VUNUPHH.1690.1
lightning_logs/version_1/: events.out.tfevents.1775698018.DESKTOP-VUNUPHH.1690.2
lightning_logs/version_10/: events.out.tfevents.1775738845.DESKTOP-VUNUPHH.1890.1
lightning_logs/version_11/: events.out.tfevents.1775738845.DESKTOP-VUNUPHH.1890.2
lightning_logs/version_12/: events.out.tfevents.1775744240.DESKTOP-VUNUPHH.2192.1
lightning_logs/version_13/: events.out.tfevents.1775744240.DESKTOP-VUNUPHH.2192.2  hparams.yaml
lightning_logs/version_14/: events.out.tfevents.1775747495.DESKTOP-VUNUPHH.2469.1  hparams.yaml
lightning_logs/version_15/: events.out.tfevents.1775747495.DESKTOP-VUNUPHH.2469.2
lightning_logs/version_16/: events.out.tfevents.1775785511.DESKTOP-VUNUPHH.6253.1
lightning_logs/version_17/: events.out.tfevents.1775785512.DESKTOP-VUNUPHH.6253.2  hparams.yaml
lightning_logs/version_18/: events.out.tfevents.1775790283.DESKTOP-VUNUPHH.9194.1
lightning_logs/version_19/: events.out.tfevents.1775790283.DESKTOP-VUNUPHH.9194.2  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1775710550.DESKTOP-VUNUPHH.1854.1  hparams.yaml
lightning_logs/version_20/: events.out.tfevents.1775792539.DESKTOP-VUNUPHH.13523.1
lightning_logs/version_21/: hparams.yaml  (+1 more)
reports/: anomalies.csv  anomaly_preview.csv  val_predictions.csv
(+47 files in other folders)
