[project]
name = "demand-forecast"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "pytest",
    "ruff"
]

[project.scripts]
build-index = "demand_forecast.build_index:main"

[tool.ruff]
line-length = 100