[project]
name = "demand-forecast"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    # Data processing
    "pandas",
    "polars",
    "duckdb",

    # ML
    "scikit-learn",
    "lightgbm",

    # Experiment tracking
    "mlflow",

    # Pipeline orchestration
    "prefect",

    # API (future serving)
    "fastapi",
    "uvicorn",

    # Utilities
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[project.scripts]
build-index = "demand_forecast.build_index:main"

[tool.ruff]
line-length = 100